# WaveDiT

./: .gitignore  CITATION.cff  LICENSE  README.md  generate.sh  pyproject.toml  requirements.txt  train.sh
configs/: cfm.yaml  cfm_Base.yaml  cfm_Deep.yaml  cfm_FinePatch.yaml  cfm_Wide.yaml  ot_fm.yaml  rectified.yaml
data/: README.md  example_catalog.csv
docs/: README.md
hf/: MODEL_CARD.md  RELEASE.md
macos/: .gitignore  ARCHITECTURE.md  README.md  build.sh
macos/packaging/: make_icon.py  wavedit_studio.spec
macos/studio/: __main__.py  engine.py  library.py  main.py  paths.py  server.py  settings.py  sysinfo.py  weights.py
macos/studio/ui/: app.css  app.js  index.html
packaging/: make_dmg.sh  wavedit_studio.spec
scripts/: generate.py  prepare_metadata.py  train.py  warmstart_from_checkpoint.py  weight_inheritance.py
space/: .gitignore  README.md  app.py  requirements.txt  run_local.sh  viewer_template.html
space/scripts/: make_hero.py  vendor_wavedit.sh
studio/: __init__.py  engine.py  main.py  minipng.py  server.py  weights.py
studio/ui/: app.css  app.js  index.html
tests/: smoke_test.py  test_config.py  test_neighborhood_attention.py
tools/: slim_checkpoint.py
wavedit/: __init__.py  config.py
wavedit/data/: __init__.py  collate.py  dataset.py  factory.py  preprocessing.py  transforms.py
wavedit/evaluation/: __init__.py  metrics.py  visualization.py
wavedit/generation/: generator.py
wavedit/models/: factory.py  sampling.py  wavelet_flow_matching.py
wavedit/training/: trainer.py
wavedit/utils/: __init__.py
(+19 files in other folders)
