[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wavedit"
version = "1.0.0"
description = "WaveDiT: Distribution-Aware Wavelet Flow Matching for Efficient 3D Brain MRI Synthesis"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "torch==2.6.0",
    "torchvision==0.21.0",
    "numpy",
    "einops>=0.7",
    "PyYAML>=6.0",
    "nibabel==5.3.2",
    "monai==1.4.0",
    "pandas==2.2.3",
    "pywavelets==1.8.0",
    "tqdm==4.67.1",
    "scikit-image==0.25.2",
    "matplotlib>=3.7",
    "wandb==0.19.9",
]

[project.optional-dependencies]
# Optimal-Transport flow matching (flow: ot_fm)
ot = ["flow-matching==1.0.10"]
# natten and xformers depend on your CUDA/torch build — install separately:
#   pip install natten -f https://whl.natten.org

[tool.setuptools.packages.find]
include = ["wavedit*"]

[tool.ruff]
line-length = 120
